# pytep

./: .gitattributes  .gitignore  .readthedocs.yml  CODE_OF_CONDUCT.rst  LICENSE  MANIFEST.in  README.md  README.rst  README_Backup.rst  SimulationOutput.npy  TEP_state.mat  app.py  dash_input_trials.py  dashboard_ideas.txt  engineutils.py  ideas.txt  index.py  install.md  links.txt  loginfo.json  main.py  mwe.py  performance_testing.py  performance_testing_repeated.py  python_save.mat  python_save_afterFirstSim.mat  python_save_afterSecondSim.mat  python_save_beforeSecondSim.mat  readme.rst  readme_info.txt  requirements.txt  run.py  setup.cfg  setup.py  setup_old.cfg  simresultstopython.py  use_examples.py
Simulator/: InitVariables.mat  MultiLoop_mode3.mdl  TEplot.m  prepareSimulation.m  temexd_mod.mexa64
assets/: more_styles.css
backend/: TEP_state.mat  engineutils.py  links.txt  main.py  matlab_bridge.py  mwe.py  python_save_afterFirstSim.mat  python_save_afterSecondSim.mat  python_save_beforeSecondSim.mat  siminterface.py  simresultstopython.py
backend/Simulator/: InitVariables.mat  Mode_1_Init.m  MultiLoop_mode3.mdl.r2019a  prepareSimulation.m  saveSimulationState.m
backend/deprecated/: TEP_state.mat  dummy_simout.mat  main.py  mwe.py  simresultstopython.py
backend/setupinfo/: idv_labels.pkl  process_var_labels.pkl  process_var_units.pkl  setpoint_labels.pkl
backend/siminterface/: main_plot_interface.py  pickle_dummy_frame.py
dash_playground/: bootstrap_p1_layout.py  dash_example_one.py  eight_subplots.py  four_subplots.py  side_by_side_plots.py  single_df_column.py  tep_data.pkl
dashboard/: index.py  run.py
docs/: requirements.txt
example_save/: idv_data.pkl  process_data.pkl  setpoint_data.pkl
frontend/: cost_plot_panel.py  input_panel.py  main_plots_panel.py  mainpage.py  plotting.py
pytep/: loginfo.json  matlab_bridge.py  siminterface.py
save_scenarios/: cost_data.pkl  manipulated_vars.pkl
tests/: dummy_logging.py  elapsed_times_perf.pkl  elapsed_times_perf_100hours_005_to_1.pkl  elapsed_times_perf_100hours_1_to_50.pkl  elapsed_times_perf_1_to_50.pkl  performance_50hours  performance_plotting.py  times_between_pauses_perf.pkl
trials/: elapsed_times_perf_005_to_1.pkl  elapsed_times_perf_1_to_50.pkl  performance_100hour_simulations.pkl  performance_100hours  performance_50hour_simulations.pkl  performance_plotting.py  performance_summary_100hours  performance_testing.py  performance_testing_repeated.py  real_dummy_logging.py
utils/: csv_from_pkl.py
(+96 files in other folders)
