[metadata]
name = pytep-creinartz
version = 0.0.5
author = Christopher Reinartz
author_email = ccrein@elektro.dtu.dk
description = Python wrapper for the Tennessee Eastman Simulator
long_description = file: README.md
long_description_content_type = text/markdown
// url = https://github.com/pypa/sampleproject
// project_urls =
//    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pytep
packages = find:
python_requires = >=3.7
install_requires =
    alabaster>=0.7.12
    attrs>=19.3.0
    Babel>=2.8.0
    Brotli>=1.0.9
    certifi>=2019.11.28
    chardet>=3.0.4
    click>=7.1.2
    dash>=1.18.1
    dash-bootstrap-components>=0.11.1
    dash-core-components>=1.14.1
    dash-html-components>=1.1.1
    dash-renderer>=1.8.3
    dash-table>=4.11.1
    decorator>=4.4.1
    docutils>=0.16
    et-xmlfile>=1.0.1
    Flask>=1.1.2
    Flask-Compress>=1.8.0
    future>=0.18.2
    idna>=2.8
    imagesize>=1.2.0
    importlib-metadata>=1.5.0
    itsdangerous>=1.1.0
    jdcal>=1.4.1
    Jinja2>=2.11.2
    MarkupSafe>=1.1.1
    matlab>=0.1
    more-itertools>=8.2.0
    networkx>=2.4
    numpy>=1.19.5
    openpyxl>=3.0.3
    packaging>=20.1
    pandas>=1.2.0
    pathlib>=1.0.1
    plotly>=4.14.3
    pluggy>=0.13.1
    py>=1.8.1
    Pygments>=2.5.2
    pyparsing>=2.4.6
    pytest>=5.3.5
    python-dateutil>=2.8.1
    pytz>=2020.5
    requests>=2.22.0
    retrying>=1.3.3
    six>=1.15.0
    snowballstemmer>=2.0.0
    urllib3>=1.25.8
    wcwidth>=0.1.8
    Werkzeug>=1.0.1
    zipp>=2.2.0

include_package_data=True

[options.packages.find]
where = pytep
