[metadata]
name = pytep-creinartz
version = 0.0.5
author = Christopher Reinartz
author_email = ccrein@elektro.dtu.dk
description = Python wrapper for the Tennessee Eastman Simulator
long_description = file: README.md
long_description_content_type = text/markdown
// url = https://github.com/pypa/sampleproject
// project_urls =
//    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pytep
packages = find:
python_requires = >=3.7
include_package_data=True

[options.packages.find]
where = pytep
